manifest/demoteam2/whats-in-a-name/acc/manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: whats-in-a-name
    env: acc
    team: demoteam2
  name: whats-in-a-name
spec:
  template:
    metadata:
      annotations:
        fnatt.io/inject-ca-bundle: enabled
        fnatt.io/inject-ca-env: enabled
      labels:
        team: demoteam2
        app: whats-in-a-name
        env: acc
    spec:
      securityContext:
        runAsNonRoot: true
      containers:
      - image: nginxinc/nginx-unprivileged:alpine3.21-perl
        livenessProbe:
          periodSeconds: 3
          initialDelaySeconds: 10
          httpGet:
            path: /health/status
            port: 8080
        resources:
          requests:
            cpu: '0.5'
            memory: 512Mi
          limits:
            cpu: '1'
            memory: 1Gi
        securityContext:
          capabilities:
            drop:
            - ALL
          allowPrivilegeEscalation: false
        ports:
        - containerPort: 8080
        name: main
        readinessProbe:
          periodSeconds: 3
          initialDelaySeconds: 10
          httpGet:
            path: /health/status
            port: 8080
  selector:
    matchLabels:
      team: demoteam2
      app: whats-in-a-name
      env: acc
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: whats-in-a-name
    env: acc
    team: demoteam2
  name: whats-in-a-name
spec:
  ingressClassName: ingress-nginx-pm
  rules:
  - host: whats-in-a-name.acc.fnatt.no
    http:
      paths:
      - path: /
        backend:
          service:
            port:
              number: 80
            name: whats-in-a-name
        pathType: Prefix
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: whats-in-a-name
    env: acc
    team: demoteam2
  name: whats-in-a-name
spec:
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
  selector:
    app: whats-in-a-name
    env: acc
    team: demoteam2
